# scrumptious

./: .gitignore
backend/: db.sqlite3  pyproject.toml
backend/config/: settings.py  urls.py
backend/ingredients/: models.py  serializers.py  urls.py  views.py
backend/ingredients/migrations/: 0001_initial.py  0002_affinity.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/: IngredientCard.tsx  SearchBar.tsx  ingredients.tsx
